# pyFileFixity

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  _infos.py  appveyor.yml  codecov.yml  easy_profiler.py  ecc_specification.txt  ecc_speedtest.py  filetamper.py  header-ecc.py  header_ecc.py  pycleaner.py  pyproject.toml  repair_ecc.py  replication_repair.py  requirements.txt  resiliency_tester.py  rfigc.py  setup.cfg  setup.cfg.bak  setup.py  setup.py.bak  structural-adaptive-ecc.py  structural_adaptive_ecc.py  tox.ini
.github/workflows/: ci-build-downstream.yml  ci-build.yml  ci-cd.yml
lib/: aux_funcs.py  eccman.py  hasher.py  md5py.py  tee.py  tqdm.py
lib/brownanrs/: LICENSE.txt  README.rst  __init__.py  alltests.py  cff.c  cff.pyx  cfftest.py  cpolynomial.c  cpolynomial.pyx  cpolynomialtest.py  ff.py  fftest.py  imageencode.py  nff.py  npolynomial.py  npolynomialtest.py  polynomial.py  polynomialtest.py  rs.py  rstest.py  setup.py
lib/brownanrs/presentation/: encodedimage_stripes3.eps  presentation.tex
lib/brownanrs/tests/: test_cff.py  test_cpolynomial.py  test_ff.py  test_polynomial.py  test_rs.py
lib/distance/: LICENSE  MANIFEST  setup.py
lib/distance/cdistance/: distance.h  fastcomp.c  includes.h  lcsubstrings.c
lib/distance/distance/: _levenshtein.py
lib/distance/tests/: tests.py
lib/gooey/: __init__.py
lib/gooey/gui/: action_sorter.py  application.py  chooser_runner.py  client_app.py  component_builder.py  controller.py  image_repository.py  imageutil.py
lib/gooey/gui/lang/: i18n.py
lib/gooey/gui/util/: quoting.py
lib/gooey/gui/widgets/: calender_dialog.py  choosers.py  components.py  components2.py  widget_pack.py
lib/gooey/gui/windows/: advanced_config.py  base_window.py  footer.py  header.py  layouts.py  runtime_display_panel.py
lib/gooey/python_bindings/: argparse_to_json.py  gooey_decorator.py  gooey_parser.py  source_parser.py
lib/gooey/tests/: argparse_to_json_unittest.py  code_prep_unittest.py  component_register_unittest.py  components_unittest.py  i18n_unittest.py  modules_unittest.py  source_parser_unittest.py
lib/profilers/visual/: functionprofiler.py
lib/profilers/visual/runsnakerun/: listviews.py  macshim.py  meliaeloader.py  pstatsloader.py
lib/profilers/visual/runsnakerun/squaremap/: squaremap.py
lib/reedsolomon/: ReedSolomon_alt.py  reedsolo.py
pyFileFixity/: __init__.py  _infos.json  _infos.py  easy_profiler.py  ecc_specification.txt  ecc_speedtest.py  filetamper.py  header_ecc.py  pff.py  repair_ecc.py  replication_repair.py  resiliency_tester.py  resiliency_tester_config.txt  rfigc.py  structural_adaptive_ecc.py
pyFileFixity/lib/: _compat.py  aux_funcs.py  eccman.py  hasher.py  pathlib2.py  tee.py
pyFileFixity/lib/brownanrs/: .travis.yml  _compat.py  cff.c  cff.pyx  cpolynomial.c  cpolynomial.pyx  cpolynomialtest.py  ff.py  fftest.py  imageencode.py  notes.txt  polynomial.py  polynomialtest.py  rstest.py  setup.py
pyFileFixity/lib/brownanrs/presentation/: compile.sh  encodedimage.eps  encodedimage_stripes1.eps  encodedimage_stripes2.eps
pyFileFixity/lib/brownanrs/tests/: test_cff.py  test_cpolynomial.py  test_ff.py  test_polynomial.py
pyFileFixity/lib/distance/: README.md
pyFileFixity/lib/distance/cdistance/: distance.c  hamming.c  levenshtein.c
pyFileFixity/lib/gooey/gui/: build_spec_validator.py  component_factory.py  components.py  display_main.py  image_repository.py  message_router.py  styling.py
pyFileFixity/lib/gooey/gui/lang/: i18n.py
pyFileFixity/lib/gooey/gui/widgets/: calender_dialog.py
pyFileFixity/lib/gooey/gui/windows/: base_window.py  basic_config_panel.py  footer.py  layouts.py
pyFileFixity/lib/gooey/python_bindings/: config_generator.py  gooey_parser.py
pyFileFixity/lib/gooey/tests/: action_sorter_unittest.py  advanced_config_unittest.py  option_reader_unittest.py
pyFileFixity/lib/profilers/visual/: debug.py
pyFileFixity/lib/profilers/visual/runsnakerun/: __init__.py  _meliaejson.py  coldshotadapter.py  homedirectory.py  meliaeadapter.py  pstatsadapter.py  runsnake.py
pyFileFixity/lib/profilers/visual/runsnakerun/squaremap/: __init__.py
pyFileFixity/lib/reedsolomon/: ReedSolomon_alt.py
pyFileFixity/lib/tqdm/: tqdm.py
pyFileFixity/tests/: aux_tests.py  test_aux_funcs.py  test_eccman.py  test_hasher.py  test_header_ecc.py  test_repair_ecc.py  test_replication_repair.py  test_resiliency_tester.py  test_rfigc.py  test_structural_adaptive_ecc.py  test_tee.py
pyFileFixity/tests/files/: testaa.txt
pyFileFixity/tests/results/: resiliency_tester_config_easy.cfg  resiliency_tester_config_hard.cfg  test_header_ecc_test_algo.db  test_header_ecc_test_dir.db  test_rfigc_test_dir.csv  test_rfigc_test_one_file.csv  test_rfigc_test_update_remove.csv
tests/: aux_tests.py  test_aux_funcs.py  test_eccman.py  test_hasher.py  test_header_ecc.py  test_repair_ecc.py  test_rfigc.py  test_structural_adaptive_ecc.py  test_tee.py
tests/files/: Snark.txt  Through the Looking Glass _ Lewis Carroll.html
tests/files/Through the Looking Glass _ Lewis Carroll_files/: not_epub.css  style.css
tests/files/sub/: testsub.txt
tests/results/: test_header_ecc_test_algo.db  test_header_ecc_test_dir.db  test_header_ecc_test_one_file_tamper.db  test_repair_ecc_check.db.idx  test_repair_ecc_sa_check.db  test_rfigc_test_dir.csv  test_rfigc_test_one_file.csv  test_rfigc_test_one_file1.csv  test_rfigc_test_one_file2.csv  test_rfigc_test_update_append.csv  test_structural_adaptive_ecc_test_algo.db  test_structural_adaptive_ecc_test_dir.db  test_structural_adaptive_ecc_test_one_file_tamper.db
