# Config file for Python 2.7, replaces setup.py
[metadata]
name = pyFileFixity
version = attr: pyFileFixity.__version__
author = Stephen Karl Larroque
author_email = lrq3000@gmail.com
description = Helping file fixity (long term storage of data) via redundant error correcting codes and hash auditing.
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
keywords = file, repair, monitor, change, reed-solomon, error, correction, error correction, parity, parity files, parity bytes, data protection, data recovery, file protection, qr codes, qr code
license = MIT License
classifiers =
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Environment :: Console',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Archiving',
    'Topic :: System :: Archiving :: Backup',
    'Topic :: System :: Monitoring',
    'Topic :: System :: Recovery Tools',
    'Topic :: Utilities',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
include = pyFileFixity
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version<"3.8"
    pathlib2
    argparse
    sortedcontainers
    tqdm
    distance
    reedsolo==1.7.0
    unireedsolomon==1.0.5

[options.package_data]
* = *.rst, LICENSE*, README*, *.pyx, *.c
pyFileFixity = ecc_specification.txt, resiliency_tester_config.txt
pyFileFixity.tests.files = *
pyFileFixity.tests.results = *

#[options.entry_points]
#console_scripts =
#    executable-name = pyFileFixity.module:function

[options.extras_require]
test = pytest; pytest-cov; py-make  # minimum test dependencies. To support coveralls in Py2, use coveralls<4
testmeta = build; twine; validate-pyproject; rstcheck  # dependencies to test meta-data. Note that some of these dependencies make cibuildwheel choke on cryptography

#[options.packages.find]
#exclude =
#    examples*
#    tools*
#    docs*
#    pyFileFixity.tests*
